# fast-agent-ingest

./: .gitignore  Cargo.toml  README.md  justfile  rust-toolchain.toml
.github/workflows/: ci.yml  release-nodejs.yml  release-python.yml
bindings/browser/: Cargo.toml  package.json
bindings/browser/src/: lib.rs
bindings/c-ffi/: Cargo.toml  cbindgen.toml
bindings/c-ffi/src/: lib.rs
bindings/cpp/: CMakeLists.txt
bindings/cpp/include/: fast_agent_ingest.hpp
bindings/cpp/tests/: CMakeLists.txt  conformance_test.cpp
bindings/csharp/FastAgentIngest/: Converter.cs  FastAgentIngest.csproj  NativeMethods.cs
bindings/csharp/FastAgentIngest.Tests/: ConformanceTests.cs  FastAgentIngest.Tests.csproj
bindings/go/: fastagentingest.go  fastagentingest_test.go  go.mod
bindings/nodejs/: Cargo.toml  package.json
bindings/nodejs/src/: lib.rs
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/src/: lib.rs
core/: Cargo.toml
core/examples/: gen-fixtures.rs
core/src/: lib.rs  types.rs
core/src/converter/: block.rs  inline.rs  mod.rs
core/src/extractor/: mod.rs  noise.rs  scoring.rs
core/src/parser/: mod.rs
core/tests/: conformance.rs
tests/conformance/nodejs/: conformance.test.mjs
tests/conformance/python/: test_conformance.py
tests/conformance/rust/: conformance_test.rs
tests/fixtures/expected/: code-blocks.md  noisy-page.md  simple-article.md  table-heavy.md
tests/fixtures/inputs/: code-blocks.html  noisy-page.html  simple-article.html  table-heavy.html
tools/: fetch_to_markdown.py
