[build-system]
requires      = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name        = "fast-agent-ingest"
version     = "0.1.0"
description = "HTML → Markdown for LLM/agent consumption"
license     = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.maturin]
features       = ["pyo3/extension-module"]
module-name    = "fast_agent_ingest"
# python-source = "python"  # uncomment if a pure-Python wrapper is added
